--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* define constants up here */
 :root {
-  --banner-bg-start: #b533ff;
+  --banner-bg-start: #8abad3;
   --banner-bg-end: #43165d;
   --produce-gray: #black;
   --search-text-gray: #949494;
