--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* define constants up here */
 :root {
   --banner-bg-start: #8abad3;
-  --banner-bg-end: #43165d;
+  --banner-bg-end: #ffc6ec;
   --produce-gray: #black;
   --search-text-gray: #949494;
   --search-gray: #f2f2f2;
