--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body {
 }
 #banner-subtitle {
   font-family: 'Roboto Condensed', sans-serif;
-  color: #f3cdd3;
+  color: #342545;
   font-size: 12px;
 }
 
