--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@
   --search-gray: #f2f2f2;
   --affil-gray: #909090;
   --name-gray: #f8f8f9;
-  --other-name-gray: #444444;
-  --ranking-affil-gray: #989898;
-  --save-box-gray: #b1b1b1;
+  --other-name-gray: #f8f8f9;
+  --ranking-affil-gray: #f8f8f9;
+  --save-box-gray: #f8f8f9;
 
   --checked-blue: #052ae2CC;
 
