--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   --banner-bg-end: #fac8d9;
   --produce-gray: #f8f8f9;
   --search-text-gray: #f8f8f9;
-  --search-gray: #f8f8f9;
+  --search-gray: #322033;
   --affil-gray: #f8f8f9;
   --name-gray: #f8f8f9;
   --other-name-gray: #f8f8f9;
