--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,13 @@
   --banner-bg-start: #6cc8eb;
   --banner-bg-end: #fac8d9;
   --produce-gray: #f8f8f9;
-  --search-text-gray: #f8f8f9;
-  --search-gray: #322033;
+  --search-text-gray: #322033;
+  --search-gray: #f8f8f9;
   --affil-gray: #f8f8f9;
   --name-gray: #f8f8f9;
   --other-name-gray: #f8f8f9;
   --ranking-affil-gray: #f8f8f9;
-  --save-box-gray: #f8f8f9;
+  --save-box-gray: #322033;
 
   --checked-blue: #052ae2CC;
 
