--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,11 @@
   --banner-bg-end: #fac8d9;
   --produce-gray: #f8f8f9;
   --search-text-gray: #322033;
-  --search-gray: #f8f8f9;
-  --affil-gray: #f8f8f9;
+  --search-gray: #322033;
+  --affil-gray: #322033;
   --name-gray: #f8f8f9;
   --other-name-gray: #f8f8f9;
-  --ranking-affil-gray: #f8f8f9;
+  --ranking-affil-gray: #322033;
   --save-box-gray: #322033;
 
   --checked-blue: #052ae2CC;
