--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   --banner-bg-start: #6cc8eb;
   --banner-bg-end: #fac8d9;
   --produce-gray: #000000;
-  --search-text-gray: #000000;
+  --search-text-gray: #FFFFFF;
   --search-gray: #000000;
   --affil-gray: #000000;
   --name-gray: #000000;
