--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   --banner-bg-end: #fac8d9;
   --produce-gray: #000000;
   --search-text-gray: #FFFFFF;
-  --search-gray: #000000;
+  --search-gray: #FFFFFF;
   --affil-gray: #000000;
   --name-gray: #000000;
   --other-name-gray: #000000;
